solving a bug, git has deleted all my changes