@@ -1,7 +1,12 @@
 package com.projeto.alphabakery.service;
 
+import com.projeto.alphabakery.dto.BrandResponse;
+import com.projeto.alphabakery.dto.ProductResponse;
 import com.projeto.alphabakery.dto.ProductTypeResponse;
+import com.projeto.alphabakery.entity.Brand;
+import com.projeto.alphabakery.entity.Product;
 import com.projeto.alphabakery.entity.ProductType;
+import com.projeto.alphabakery.repository.ProductRepository;
 import com.projeto.alphabakery.repository.ProductTypeRepository;
 import lombok.extern.log4j.Log4j2;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -12,7 +17,7 @@ import java.util.stream.Collectors;
 
 @Service
 @Log4j2
-public class ProductTypeServiceImpl implements ProductTypeService{
+public class ProductTypeServiceImpl implements ProductTypeService {
 
     private final ProductTypeRepository productTypeRepository;
 
@@ -23,41 +28,54 @@ public class ProductTypeServiceImpl implements ProductTypeService{
     @Override
     public List<ProductTypeResponse> getAllProductTypes() {
         log.info("Fetching all product types");
-        List<ProductType> productTypesList = productTypeRepository.findAll();
-        List<ProductTypeResponse> productTypeResponses = productTypesList.stream()
-                .map(this::convertIntoproductTyperesponse)
-                .collect(Collectors.toList());
-        return productTypeResponses;
+
+        return productTypeRepository.findAll()
+                .stream()
+                .map(this::mapToResponse)
+                .toList();
     }
 
     @Override
-    public ProductType createProductType(ProductType productType) {
-        return productTypeRepository.save(productType);
+    public ProductTypeResponse createProductType(ProductType productType) {
+        log.info("Creating product type: {}", productType.getName());
+
+        ProductType savedProductType = productTypeRepository.save(productType);
+
+        return mapToResponse(savedProductType);
     }
 
     @Override
-    public ProductType getProductTypeById(Integer productTypeId) {
-        return productTypeRepository.findById(productTypeId)
-                .orElseThrow(() -> new RuntimeException("ProductType not found"));
+    public ProductTypeResponse getProductTypeById(Integer productTypeId) {
+        log.info("Fetching product type with id: {}", productTypeId);
+
+        ProductType productType = productTypeRepository.findById(productTypeId)
+                .orElseThrow(() -> new RuntimeException("ProductType not found with id: " + productTypeId));
+
+        return mapToResponse(productType);
     }
 
     @Override
-    public ProductType updateProductType(Integer productTypeId, ProductType productType) {
+    public ProductTypeResponse updateProductType(Integer productTypeId, ProductType productType) {
+        log.info("Updating product type with id: {}", productTypeId);
 
         ProductType existingProductType = productTypeRepository.findById(productTypeId)
-                .orElseThrow(() -> new RuntimeException("Product type not found"));
+                .orElseThrow(() -> new RuntimeException("ProductType not found with id: " + productTypeId));
 
         existingProductType.setName(productType.getName());
-        return productTypeRepository.save(existingProductType);
+
+        ProductType updatedProductType = productTypeRepository.save(existingProductType);
+
+        return mapToResponse(updatedProductType);
     }
 
     @Override
     public void deleteProductType(Integer productTypeId) {
-        productTypeRepository.deleteById(productTypeId);
+        log.info("Deleting product type with id: {}", productTypeId);
 
+        productTypeRepository.deleteById(productTypeId);
     }
 
-    private ProductTypeResponse convertIntoproductTyperesponse(ProductType productType) {
+    private ProductTypeResponse mapToResponse(ProductType productType) {
         return ProductTypeResponse.builder()
                 .id(productType.getId())
                 .name(productType.getName())
